[package]
name = "project"
version = "0.1.0"
edition = "2021"
authors = ["Hirew <hery.dannez@gmail.com>"]
description = "Create New Project automaticly with the help of the command line !"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "project"

[env]


[dependencies.clap]
version = "3.2.1"
features = ["derive"]
[dependencies]
colored = "2.0"
whoami = "1.2.1"
[dependencies.crossterm]
version = "0.23"
features = ["event-stream"] 